--- a/onlinecourse/templates/onlinecourse/course_detail_bootstrap.html
+++ b/onlinecourse/templates/onlinecourse/course_detail_bootstrap.html
@@ -50,38 +50,41 @@
                     </div>
                 {% endfor %}
             </div>
-
             <!-- Task: show questions and choices -->
+            <!-- <HINT> Use Bootstrap Collapse to hide exam first, more details could be found here
+            https://www.w3schools.com/bootstrap4/bootstrap_collapse.asp-->
+
+            <button class="btn btn-info btn-block" data-toggle="collapse" data-target="#exam">Start Exam</button>
+
+            <div id="exam" class="collapse">
+            <!-- <HINT> If user is authenticated, show course exam with a list of question -->
             {% if user.is_authenticated %}
-            <div class="mt-4">
-                <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#exam" aria-expanded="false" aria-controls="exam">
-                    Show Exam
-                </button>
-                <div id="exam" class="collapse mt-3">
-                    <form id="questionform" action="{% url 'onlinecourse:submit_exam' course.id %}" method="post">
+                <form id="questionform" action="{% url 'onlinecourse:submit' course.id %}" method="post">
+                    {% for question in course.question_set.all %}
+                    <div class="card mt-1">
+                        <div class="card-header"><h5>{{ question.text}}</h5></div>
                         {% csrf_token %}
-                        {% for question in course.question_set.all %}
-                        <div class="card mt-1">
-                            <div class="card-header">
-                                <h5>{{ question.question_text }}</h5>
+                        <div class="form-group">
+                            <!-- ... for each choice in the question ... -->
+                            {% for choice in question.choice_set.all %}
+                            <div class="form-check">
+                                <label class="form-check-label">
+                                    <input type="checkbox" name="choice_{{choice.id}}"
+                                            class="form-check-input" id="{{choice.id}}"
+                                            value="{{choice.id}}">{{ choice.text }}
+                                </label>
                             </div>
-                            <div class="card-body">
-                                {% for choice in question.choice_set.all %}
-                                <div class="form-check">
-                                    <input type="checkbox" name="choice_{{ choice.id }}" class="form-check-input" id="choice_{{ choice.id }}" value="{{ choice.id }}">
-                                    <label class="form-check-label" for="choice_{{ choice.id }}">
-                                        {{ choice.choice_text }}
-                                    </label>
-                                </div>
-                                {% endfor %}
-                            </div>
+                            {% endfor %}
                         </div>
-                        {% endfor %}
-                        <input class="btn btn-success btn-block" type="submit" value="Submit">
-                    </form>
-                </div>
+                    </div>
+                    {% endfor %}
+                    <input class="btn btn-success btn-block" type="submit" value="Submit">
+                </form>
+                {% endif %}
             </div>
-            {% endif %}
+
+            <!--Check here to see more details Bootstrap checkbox
+             https://www.w3schools.com/bootstrap4/bootstrap_forms_inputs.asp-->
     </div>
 </body>
 </html>
