--- a/onlinecourse/templates/onlinecourse/course_detail_bootstrap.html
+++ b/onlinecourse/templates/onlinecourse/course_detail_bootstrap.html
@@ -58,29 +58,32 @@
 
             <div id="exam" class="collapse">
             <!-- <HINT> If user is authenticated, show course exam with a list of question -->
-            {% if user.is_authenticated %}
-                <form id="questionform" action="{% url 'onlinecourse:submit' course.id %}" method="post">
+                {% if user.is_authenticated %}
+            </br>
+            <button class="btn btn-primary btn-block" data-toggle="collapse" data-target="#exam">Start Exam</button>
+            <div id="exam" class="collapse">
+                <form id="questionform" action="{% url 'onlinecourse:submit' course.id %}" method="POST">
                     {% for question in course.question_set.all %}
                     <div class="card mt-1">
-                        <div class="card-header"><h5>{{ question.text}}</h5></div>
-                        {% csrf_token %}
-                        <div class="form-group">
-                            <!-- ... for each choice in the question ... -->
-                            {% for choice in question.choice_set.all %}
-                            <div class="form-check">
-                                <label class="form-check-label">
-                                    <input type="checkbox" name="choice_{{choice.id}}"
-                                            class="form-check-input" id="{{choice.id}}"
-                                            value="{{choice.id}}">{{ choice.text }}
-                                </label>
+                        <div class="card-header"><h5>{{ question.question_text }}</h5></div>
+                            {% csrf_token %}
+                            <div class="form-group">
+                                {% for choice in question.choice_set.all %}
+                                <div class="form-check">
+                                    <label class="form-check-label">
+                                        <input type="checkbox" name="choice_{{choice.id}}"
+                                               class="form-check-input" id="{{choice.id}}"
+                                               value="{{choice.id}}">{{ choice.choice_text}}
+                                    </label>
+                                </div>
+                                {% endfor %}
                             </div>
-                            {% endfor %}
                         </div>
-                    </div>
-                    {% endfor %}
+                        {% endfor %}
                     <input class="btn btn-success btn-block" type="submit" value="Submit">
                 </form>
-                {% endif %}
+            </div>
+            {% endif %}
             </div>
 
             <!--Check here to see more details Bootstrap checkbox
